rand bt behind arrows bug fix

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -86,6 +86,7 @@ body{
     justify-content: center;
     align-items: center;
     align-self: center;
+    z-index: 2;
 }
 
 .rgenerate-bt img{
@@ -110,6 +111,7 @@ body{
     transform: translateX(-50%);
     justify-content: space-between;
     width: 250px;
+    z-index: 1;
 }
 
 
